fixed one more mistake

--- a/src/main/resources/db/changelog/changes/02-create-projects-table.yaml
+++ b/src/main/resources/db/changelog/changes/02-create-projects-table.yaml
@@ -25,12 +25,12 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: start_date
-                  type: timestamp
+                  type: date
                   constraints:
                     nullable: false
               - column:
                   name: end_date
-                  type: timestamp
+                  type: date
                   constraints:
                     nullable: false
               - column:
