--- a/src/main/resources/db/changelog/changes/03-create-tasks-table.yaml
+++ b/src/main/resources/db/changelog/changes/03-create-tasks-table.yaml
@@ -35,7 +35,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: due_date
-                  type: timestamp
+                  type: date
                   constraints:
                     nullable: false
               - column:
