--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+JWT.EXPIRATION=3000000
+JWT.SECRET=fhjhdfkgjfkjgdkfjfhdfhgfjfgjfjfjgf
+ARRAY_OF_ENDPOINTS=/api/auth/**,/swagger-ui/**,/v3/api-docs/**
 MYSQLDB_USER=root
 MYSQLDB_ROOT_PASSWORD=myPassword
 MYSQLDB_DATABASE=task_management_db
