--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -11,3 +11,9 @@ databaseChangeLog:
       file: db/changelog/changes/05-create-attachments-table.yaml
   - include:
       file: db/changelog/changes/06-create-comments-table.yaml
+  - include:
+      file: db/changelog/changes/07-create-roles-table.yaml
+  - include:
+      file: db/changelog/changes/08-add-roles-to-roles-table.yaml
+  - include:
+      file: db/changelog/changes/09-create-users_roles-table.yaml
