--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost/task_management_db?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=myPassword
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.docker.compose.enabled=false
