--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/ticket_app?serverTimeZone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/task_management_db?serverTimeZone=UTC
 spring.datasource.username=root
 spring.datasource.password=myPassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
