changed id of one more luquibase file

--- a/src/main/resources/db/changelog/changes/02-create-projects-table.yaml
+++ b/src/main/resources/db/changelog/changes/02-create-projects-table.yaml
@@ -1,6 +1,6 @@
 databaseChangeLog:
   - changeSet:
-      id: create-projects-table
+      id: create_projects_table
       author: rostyslav_kuzmych
       changes:
         - createTable:
