[DB+API+Component+Object]Label_feature: [DB]: Add 10-add-constraints-labels-table.yaml Add 11-insert-labels-labels-table.yaml [API]: Add LabelController.java # Endpoints: # create; # getAll; # update; # delete. [Component]: LabelRepository.java LabelMapper.java Add LabelService.java Add LabelServiceImpl.java [Object]: Add LabelRequestDto.java Add LabelResponseDto.java

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -17,3 +17,7 @@ databaseChangeLog:
       file: db/changelog/changes/08-add-roles-to-roles-table.yaml
   - include:
       file: db/changelog/changes/09-create-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/10-add-constraints-labels-table.yaml
+  - include:
+      file: db/changelog/changes/11-insert-labels-labels-table.yaml
