--- a/src/main/resources/db/changelog/changes/12-add-users_roles-to-users_roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/12-add-users_roles-to-users_roles-table.yaml
@@ -8,16 +8,16 @@ databaseChangeLog:
             columns:
               - column:
                   name: user_id
-                  value: 1
+                  valueComputed: (SELECT id FROM users WHERE email='alice@gmail.com')
               - column:
                   name: role_id
-                  value: 2
+                  valueComputed: (SELECT id FROM roles WHERE role_name='USER')
         - insert:
             tableName: users_roles
             columns:
               - column:
                   name: user_id
-                  value: 1
+                  valueComputed: (SELECT id FROM users WHERE email='alice@gmail.com')
               - column:
                   name: role_id
-                  value: 1
+                  valueComputed: (SELECT id FROM roles WHERE role_name='ADMIN')
