added health and user controllers

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 JWT.EXPIRATION=3000000
 JWT.SECRET=fhjhdfkgjfkjgdkfjfhdfhgfjfgjfjfjgf
-ARRAY_OF_ENDPOINTS=/api/auth/**,/swagger-ui/**,/v3/api-docs/**
+ARRAY_OF_ENDPOINTS=/api/auth/**,/swagger-ui/**,/v3/api-docs/**,/api/**
 MYSQLDB_USER=root
 MYSQLDB_ROOT_PASSWORD=myPassword
 MYSQLDB_DATABASE=task_management_db
