--- a/src/main/resources/db/changelog/changes/14-insert-project.yaml
+++ b/src/main/resources/db/changelog/changes/14-insert-project.yaml
@@ -23,7 +23,4 @@ databaseChangeLog:
                   value: '2024-12-31'
               - column:
                   name: status
-                  value: In Progress
-              - column:
-                  name: is_deleted
-                  value: false
+                  value: IN_PROGRESS
