--- a/src/main/resources/db/changelog/changes/12-add-users_roles-to-users_roles-table.yaml
+++ b/src/main/resources/db/changelog/changes/12-add-users_roles-to-users_roles-table.yaml
@@ -21,3 +21,12 @@ databaseChangeLog:
               - column:
                   name: role_id
                   valueComputed: (SELECT id FROM roles WHERE role_name='ADMIN')
+        - insert:
+            tableName: users_roles
+            columns:
+              - column:
+                  name: user_id
+                  valueComputed: (SELECT id FROM users WHERE email='alex@gmail.com')
+              - column:
+                  name: role_id
+                  valueComputed: (SELECT id FROM roles WHERE role_name='USER')
