- improved Project model - added user relation to project - fixed project methods(now search, add, update and delete depends on currently authenticated user) - added liquibase script with additional user_id column in projects table - improved projects dtos

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -21,3 +21,5 @@ databaseChangeLog:
       file: db/changelog/changes/11-add-user-to-users-table.yaml
   - include:
       file: db/changelog/changes/12-add-users_roles-to-users_roles-table.yaml
+  - include:
+      file: db/changelog/changes/13-add-user-id-column-to-projects-table.yaml
