added nullable constraint

--- a/src/main/resources/db/changelog/changes/16-add-user-id-column-to-projects-table.yaml
+++ b/src/main/resources/db/changelog/changes/16-add-user-id-column-to-projects-table.yaml
@@ -12,3 +12,4 @@ databaseChangeLog:
                   constraints:
                     references: users(id)
                     foreignKeyName: fk_user_id_projects
+                    nullable: false
