--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management_db?serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=Rostuk111@
+spring.datasource.password=x
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
 changeLogFile=/db/changelog/db.changelog-master.yaml
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.docker.compose.enabled=false
