added attachment controller

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+DROP_BOX_ACCESS_TOKEN=sl.BtjH7cy4g4XS63Ncd9ChfhqaqYHKWMYqB9CFoGRhQQIsqRw0N1aAYwvl_UAicWGjk6BhHD-iFWv9ARD-a102LJkA2tbnG8-IVo6RcX-anwOQzxuJEKwosTDG_Z0yjwsIdIJYe7SGRARJ
 JWT.EXPIRATION=3000000
 JWT.SECRET=fhjhdfkgjfkjgdkfjfhdfhgfjfgjfjfjgf
 ARRAY_OF_ENDPOINTS=/api/auth/**,/swagger-ui/**,/v3/api-docs/**
