fixed some minor mistaked with name of fields

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -31,3 +31,5 @@ databaseChangeLog:
       file: db/changelog/changes/15-insert-tasks-to-tasks-table.yaml
   - include:
       file: db/changelog/changes/16-add-user-id-column-to-projects-table.yaml
+  - include:
+      file: db/changelog/changes/17-add-one-more-project-to-projects-table.yaml
