added application-local.properties class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,8 @@ changeLogFile=/db/changelog/db.changelog-master.yaml
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.docker.compose.enabled=false
+public_endpoints=${public_endpoints}
+jwt.secret=${jwt.secret}
+jwt.expiration=${jwt.expiration}
+drop_box_file_path=${drop_box_file_path}
+drop_box_access_token=${drop_box_access_token}
