--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,4 +1,4 @@
-spring.config.import=optional:file:.env
+spring.config.import=optional:file:.env[.properties]
 public_endpoints=/api/auth/**,/swagger-ui/**,/v3/api-docs/**,/api/health
 jwt.secret=${JWT.SECRET}
 jwt.expiration=${JWT.EXPIRATION}
