changed structure of access private variables

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.url=jdbc:tc:mysql:8:///task_management_db
 spring.datasource.username=test
 spring.datasource.password=test
-
+public_endpoints=/api/auth/**,/swagger-ui/**,/v3/api-docs/**,/api/health
+jwt.secret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+jwt.expiration=300000
+drop_box_file_path=custom_path
+drop_box_access_token=custom_token
