--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ MYSQLDB_DOCKER_PORT=3306
 SPRING_LOCAL_PORT=8088
 SPRING_DOCKER_PORT=8080
 DEBUG_PORT=5005
+TELEGRAM_BOT_NAME=DA_task_manager_bot
+TELEGRAM_BOT_TOKEN=6922423500:AAERt55PLpi6pWgDN5KwrhTyd_oxOh_jesg
