--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,5 @@ MYSQLDB_DOCKER_PORT=****
 SPRING_LOCAL_PORT=****
 SPRING_DOCKER_PORT=****
 DEBUG_PORT=****
+TELEGRAM_BOT_NAME=****
+TELEGRAM_BOT_TOKEN=****
