[DB + API]: DB: added column telegramChatId to users table API: added classes for sending messages to telegram

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ jwt.secret=${jwt.secret}
 jwt.expiration=${jwt.expiration}
 drop_box_file_path=${drop_box_file_path}
 drop_box_access_token=${drop_box_access_token}
+telegram_bot_name=${telegram_bot_name}
+telegram_bot_token=${telegram_bot_token}
