--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,4 +6,5 @@ jwt.secret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 jwt.expiration=300000
 drop_box_file_path=custom_path
 drop_box_access_token=custom_token
-
+telegram_bot_name=custom_name
+telegram_bot_token=custom_token
