edited TaskController, TaskMapper, TaskRepository, reordered liquibase scripts, added tests for TaskController, TaskServiceImpl, TaskRepository.

--- a/src/main/resources/db/changelog/changes/17-insert-tasks-to-tasks-table.yaml
+++ b/src/main/resources/db/changelog/changes/17-insert-tasks-to-tasks-table.yaml
@@ -27,3 +27,27 @@ databaseChangeLog:
               - column:
                   name: assignee_id
                   value: 1
+        - insert:
+            tableName: tasks
+            columns:
+              - column:
+                  name: name
+                  value: Task 2
+              - column:
+                  name: description
+                  value: Description for Task 2
+              - column:
+                  name: priority
+                  value: HIGH
+              - column:
+                  name: status
+                  value: IN_PROGRESS
+              - column:
+                  name: due_date
+                  value: '2024-01-24'
+              - column:
+                  name: project_id
+                  value: 1
+              - column:
+                  name: assignee_id
+                  value: 1
