added logic for sending notifications

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,5 +6,5 @@ jwt.secret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 jwt.expiration=300000
 drop_box_file_path=custom_path
 drop_box_access_token=custom_token
-telegram_bot_name=custom_name
-telegram_bot_token=custom_token
+telegram_bot_name=test_task_management_bot
+telegram_bot_token=6449744580:AAHzyfR8gCv0RjlW6tpwcvlniRfzs6DFI_8
