--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -2,7 +2,7 @@ spring.config.import=optional:file:.env[.properties]
 public_endpoints=/api/auth/**,/swagger-ui/**,/v3/api-docs/**,/api/health
 jwt.secret=${JWT.SECRET}
 jwt.expiration=${JWT.EXPIRATION}
-drop_box_file_path=${DROP_BOX_USERS_FILES_PATH}
+drop_box_file_path=${DROP_BOX_FILE_PATH}
 drop_box_access_token=${DROP_BOX_ACCESS_TOKEN}
 telegram_bot_name=${TELEGRAM_BOT_NAME}
 telegram_bot_token=${TELEGRAM_BOT_TOKEN}
