[Test API]: fixed attachment repository test bug #31 (#27)
fixed attachment repository test bug

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,4 +4,5 @@ jwt.secret=${JWT.SECRET}
 jwt.expiration=${JWT.EXPIRATION}
 drop_box_file_path=${DROP_BOX_FILE_PATH}
 drop_box_access_token=${DROP_BOX_ACCESS_TOKEN}
-
+telegram_bot_name=${TELEGRAM_BOT_NAME}
+telegram_bot_token=${TELEGRAM_BOT_TOKEN}
