--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/task_management_db?serverTimeZone=UTC
 spring.datasource.username=root
-spring.datasource.password=myPassword
+spring.datasource.password=Rostuk111@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
@@ -13,3 +13,5 @@ jwt.secret=${jwt.secret}
 jwt.expiration=${jwt.expiration}
 drop_box_file_path=${drop_box_file_path}
 drop_box_access_token=${drop_box_access_token}
+telegram_bot_name=${telegram_bot_name}
+telegram_bot_token=${telegram_bot_token}
