--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -34,6 +34,9 @@ databaseChangeLog:
   - include:
       file: db/changelog/changes/17-add-one-more-project-to-projects-table.yaml
   - include:
-      file: db/changelog/changes/18-set-user-id-to-project.yaml
+      file: db/changelog/changes/18-add-column-telegram-chat-id-to-users-table.yaml
   - include:
-      file: db/changelog/changes/19-add-constraint-to-projects-table-user-id-column.yaml
+      file: db/changelog/changes/19-set-user-id-to-project.yaml
+  - include:
+      file: db/changelog/changes/20-add-constraint-to-projects-table-user-id-column.yaml
+
