--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,10 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/task_management_db?serverTimeZone=UTC
-spring.datasource.username=root
-spring.datasource.password=Rostuk111@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=validate
 changeLogFile=/db/changelog/db.changelog-master.yaml
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=true
 spring.docker.compose.enabled=false
-public_endpoints=${public_endpoints}
-jwt.secret=${jwt.secret}
-jwt.expiration=${jwt.expiration}
-drop_box_file_path=${drop_box_file_path}
-drop_box_access_token=${drop_box_access_token}
-telegram_bot_name=${telegram_bot_name}
-telegram_bot_token=${telegram_bot_token}
+public_endpoints=${PUBLIC_ENDPOINTS}
+jwt.secret=${JWT.SECRET}
+jwt.expiration=${JWT.EXPIRATION}
+drop_box_file_path=${DROP_BOX_FILE_PATH}
+drop_box_access_token=${DROP_BOX_ACCESS_TOKEN}
