--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
-DROP_BOX_USERS_FILES_PATH=*****
+DROP_BOX_FILE_PATH=*****
 DROP_BOX_ACCESS_TOKEN=*****
 JWT.EXPIRATION=****
 JWT.SECRET=****
-ARRAY_OF_ENDPOINTS=****
+PUBLIC_ENDPOINTS=*****
 MYSQLDB_USER=****
 MYSQLDB_ROOT_PASSWORD=****
 MYSQLDB_DATABASE=****
