Sheltered telegram bot credentials to GitHub secrets from /test/resources/application.properties

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,9 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      telegram_bot_name: ${{ secrets.TELEGRAM_BOT_NAME }}
+      telegram_bot_token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
 
     steps:
       - uses: actions/checkout@v2
