--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,5 +6,6 @@ jwt.secret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 jwt.expiration=300000
 drop_box_file_path=custom_path
 drop_box_access_token=custom_token
-telegram_bot_name=test_task_management_bot
-telegram_bot_token=6449744580:AAHzyfR8gCv0RjlW6tpwcvlniRfzs6DFI_8
+spring.config.import=optional:file:.env[.properties]
+telegram_bot_name=${TELEGRAM_BOT_NAME}
+telegram_bot_token=${TELEGRAM_BOT_TOKEN}
