--- a/src/main/resources/db/changelog/changes/19-set-user-id-to-project.yaml
+++ b/src/main/resources/db/changelog/changes/19-set-user-id-to-project.yaml
@@ -9,6 +9,5 @@ databaseChangeLog:
             columns:
               - column:
                   name: user_id
-                  value: 1
+                  valueComputed: (SELECT id FROM users WHERE email='alice@gmail.com')
             where: id = 1
-
