--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
-spring.datasource.url=jdbc:tc:mysql:8:///task_management_db
+spring.datasource.url=jdbc:tc:mysql:8:///test
 spring.datasource.username=test
 spring.datasource.password=test
+
 public_endpoints=/api/auth/**,/swagger-ui/**,/v3/api-docs/**,/api/health
 jwt.secret=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 jwt.expiration=300000
@@ -8,3 +9,4 @@ drop_box_file_path=custom_path
 drop_box_access_token=custom_token
 telegram_bot_name=test_task_management_bot
 telegram_bot_token=6449744580:AAHzyfR8gCv0RjlW6tpwcvlniRfzs6DFI_8
+
